2008-11-21  Dustin J. Mitchell <dustin@zmanda.com>
	* restore-src/restore.c: Continue if setting PROPERTY_READ_BUFFER_SIZE
				 fail.

2008-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/server_util.c: Skip one field in parsing INFO pid line.

2008-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/extract_list.c: Use config.
	* server-src/dumper.c: Check dle_str for NULL.

2008-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.sh: Run amreport if the 'log' file already exist.

2008-11-20  Urs Schurer <urs@sitb.de>
	* server-src/amindexd.c: remove unnecessary stralloc()/free() calls
	  in process_ls_dump

2008-11-19 Satya Ganga <gsat@zmanda.com>
	* example/inetd.conf.amandaserver.in: Add serverconfig file
	* configure.in,example/Makefile.am: Include inetd.conf.amandaserver

2008-11-18 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: removed conditionals around
	  perl(ExtUtils::Embed) so that buildrequires applies to all platforms

2008-11-18  Satya Ganga <gsat@zmanda.com>
	* device-src/tape-device.c: Remove O_NONBLOCK flag from all tape open calls.

2008-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Free qdisk after the loop.
	* application-src/amgtar.c: Free qdisk after the loop.

2008-11-17  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amgtar.8.xml: Update for ATIME-PRESERVE default.

2008-11-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Fix formating.

2008-11-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Parse "taper: using label ..." line.
	* server-src/driver.c: Print tape size.
	* server-src/amtoc.pl: Fix for new log format.
	* server-src/reporter.c: Increase field width.
	* server-src/taper.c: Print number of kbytes written to each tape.

2008-11-14  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c: eliminate an extra buffer copy in the